gobmkida/c3/ascii_showboard
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:714:12: error: array type 'char [19]' is not assignable
hspots[20] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:715:12: error: array type 'char [19]' is not assignable
hspots[58] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:716:12: error: array type 'char [19]' is not assignable
hspots[22] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:717:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:718:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:727:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:730:1: error: use of undeclared identifier 'byte_B7702F'
byte_B7702F[2 * v24 + v0] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:731:17: error: array type 'char [19]' is not assignable
hspots[v0 + 53] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:732:1: error: use of undeclared identifier 'byte_B7702C'
byte_B7702C[v0 + v25] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:734:18: error: array type 'char [19]' is not assignable
hspots[v26 + 57] = 43; 
~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:736:22: error: array type 'char [19]' is not assignable
hspots[19 * v26 + 3] = 43; 
~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:737:1: error: use of undeclared identifier 'byte_B7702C'
byte_B7702C[v0 + v27] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:738:19: error: array type 'char [19]' is not assignable
hspots[v26 + v25] = 43; 
~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:739:19: error: array type 'char [19]' is not assignable
hspots[v26 + v27] = 43; 
~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:743:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:745:16: error: array type 'char [19]' is not assignable
hspots[v5 + 2] = 43; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:746:17: error: array type 'char [19]' is not assignable
hspots[v3 + 38] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:747:17: error: array type 'char [19]' is not assignable
hspots[v3 + v5] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:748:40: error: array type 'char [19]' is not assignable
hspots[20 * ( ( unsigned int)v0 >> 1)] = 43; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:753:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:755:1: error: use of undeclared identifier 'byte_B7702F'
byte_B7702F[2 * v23 + v0] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:756:17: error: array type 'char [19]' is not assignable
hspots[v0 + 53] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:757:1: error: use of undeclared identifier 'byte_B7702C'
byte_B7702C[2 * v23 - 4 + v0 + v0] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:761:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:763:16: error: array type 'char [19]' is not assignable
hspots[v4 + 2] = 43; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:764:17: error: array type 'char [19]' is not assignable
hspots[v3 + 38] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/interface/play_ascii.c:765:17: error: array type 'char [19]' is not assignable
hspots[v3 + v4] = 43; 
~~~~~~~~~~~~~~~ ^
27 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ascii_showboard/src/obj/2/play_ascii.o] Error 1
